@@ -14,6 +14,7 @@ Brian D'Urso		<durso@hussle.harvard.edu>
 Lyndon Drake		<lyndon@stat.auckland.ac.nz>
 Dirk Eddelbuettel	<edd@debian.org>
 Claus Ekstrom		<ekstrom@dina.kvl.dk>
+Sebastian Fischmeister	<sfischme@uwaterloo.ca>
 John Fox		<jfox@mcmaster.ca>
 Paul Gilbert		<pgilbert@bank-banque-canada.ca>
 Frank E Harrell Jr	<f.harrell@vanderbilt.edu>
